--- a/Exercise03/Question01/Makefile
+++ b/Exercise03/Question01/Makefile
@@ -1,8 +1,5 @@
 all:
-	gcc -c arrays.c -o arrays.o -fopenmp									# compile object file arrays
-	gcc -c multiplication.c -o multiplication.o -fopenmp					# compile object file multiplication
-	gcc implementation.c -fPIC arrays.c -fPIC multiplication.c -o implementation -fopenmp
+	gcc implementation.c -o implementation -fopenmp -lgomp -foffload=nvptx-none -lcuda -foffload="-misa=sm_35" -fcf-protection=none -fno-stack-protector
 clean:
 	rm -f implementation
 	rm -f arrays.o
-	rm -f multiplication.o
